edit html and add css style
be complete at a later date as I progress along the program

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CheatSheet</title>
         <link rel="stylesheet" href="CSS/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anta&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 
 
@@ -12,8 +15,8 @@
         <header class="site-header">
             <nav class="navbar">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#html" class="nav-link"></a>HTML</li>
-                    <li class="nav-item"><a href="#css" class="nav-link"></a>CSS</li>
+                    <li class="nav-item"><a href="#html" class="nav-link">HTML</a></li>
+                    <li class="nav-item"><a href="#css" class="nav-link">CSS</a></li>
                 </ul>
             </nav>
         </header>
